# llvm2kittel-mini

./: .gitignore  CMakeLists.txt  Condenser.cpp  Condenser.h  Constraint.cpp  Constraint.h  ConstraintEliminator.cpp  ConstraintEliminator.h  INSTALL  Polynomial.cpp  Polynomial.h  README.md  Ref.h  Rule.cpp  Rule.h  Slicer.cpp  Slicer.h  Term.cpp  Term.h  gmp_kittel.cpp  llvm2kittel.cpp  llvm2kittel_mini  llvm2kittel_mini.cbp
